# remote-sensing-platform

./: .gitignore
backend/: .dockerignore  .env  .env.example  Dockerfile  pyproject.toml  requirements-ai.txt  requirements-dev.txt  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 02ca828f4abe_add_preview_columns_to_satellite_images.py  a1b2c3d4e5f6_create_users_table.py  b2c3d4e5f6a7_create_project_image_prediction_report_tables.py
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  (+4 more)
backend/app/core/: __init__.py  config.py  exceptions.py  logging.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  prediction.py  project.py  report.py  satellite_image.py  user.py
backend/app/repositories/: __init__.py  prediction_repository.py  project_repository.py  report_repository.py  satellite_image_repository.py  user_repository.py
backend/app/schemas/: prediction.py  project.py  report.py  satellite_image.py  token.py  user.py
backend/app/services/: auth_service.py  geotiff_metadata_service.py  preview_generator.py  project_service.py  satellite_image_service.py
backend/tests/: conftest.py  test_health.py
backend/tests/integration/: __init__.py  test_auth_api.py
backend/tests/unit/: __init__.py  test_auth_service.py  test_prediction_repository.py  test_project_repository.py  test_report_repository.py  test_satellite_image_repository.py  test_security.py
(+37 files in other folders)
